Sorting Tasks ALphabetically

--- a/html/index.html
+++ b/html/index.html
@@ -22,9 +22,8 @@
   </div>
 <div id="sortBy">
     <label for="sortBy">Sort Tasks:</label>
-    <select id="selectButton">
-      <option value="Alphabetically">Alphabetically</option>
-      <option value="Due Today">Due Today</option>
+    <select id="selectButton" name="selectButton" onchange="chgAction();">
+      <option selected>Alphabetically</option>
     </select>
 </div>
   
